# ALBUS_ionosphere

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  FMM_inpainting.py  INSTALL  Jenkinsfile.sh  LICENSE  Makefile  README.md  UPDATING_SPACE_WEATHER  adjust_reference_position.py  beam_to_pixels.py  breizorro_extract.py  build_rnx_crx  calculate_source_parms.py  check_array.py  cmake_install.cmake  combine_images.py  conv_image.py  coords.py  dates  definitions  equipartition.py  fast_orbital_data  generate_manual_polygon.py  generate_mask_polygons.py  generate_morphology_image.py  generate_separate_masks.py  get_alasky_image.py  get_galaxy_parameters.py  get_morphology_images.py  get_simple_source_list.py  image_math.py  inpainter.py  insert_beam_parameters.py  iri.update  kill_python  larrys_script.py  (+13 more)
C++/: CMakeLists.txt  Makefile  Makefile.ori  cmake_install.cmake
C++/AlbusIonosphere/: .dependencies.mk  CMakeLists.txt  Makefile
C++/AlbusIonosphere/python_attempt/: .dependencies.mk  AlbusIonosphere.cxx  AlbusIonosphere.cxx_Py3  AlbusIonosphere.cxx_numarray  CMakeLists.txt  Makefile  cmake_install.cmake  pyinp  pyinp.py  setup.py  setup.py.ori  setup.py_numarray
C++/AlbusIonosphere/python_attempt/numpy/: NOTES
C++/mim/test/PIMrunner/: .dependencies.mk  .dependencies.mk.ori  3C.cxx  3C.h  CMakeLists.txt  GPS.cxx  GPS.h  GPS_collection.cxx  GPS_collection.cxx_new  GPS_collection.cxx_old  GPS_collection.h  GPS_collection.h_old  GPS_criteria.h  GPS_receiver.h  GPS_receiver_obs.cxx  GPS_receiver_obs.h  GPS_satellites.cxx  GPS_satellites.h  GPS_times.cxx  MC_direction.cxx  MC_random.h  MT_random.cxx  Makefile  Makefile.ori  VTEC.cxx  armadillo.cxx  atmosphere_point.cxx  cal_source.cxx  cal_source.h  cmake_install.cmake  compile_lapacke  data_calibrator.cxx  data_calibrator.cxx_test  data_calibrator.h  data_calibrator.h_test  dummy  filter.cxx  iono_runner.cxx  ionosphere.cxx  ionosphere.h  (+54 more)
C++/vex_to_sky2/: .dependencies.mk_old  CMakeLists.txt  Makefile  Makefile.ori  cmake_install.cmake  ell_coord_converter.cxx  ellipsoidal_coord.cxx  ellipsoidal_coord.h  scan_processor.cc  scan_processor.h  test.cxx  ut1_interp.f  ut1_interp.h  vex_iono_processor.cxx  vex_iono_processor.h  vex_time.cxx  vex_time.cxx.ori  vex_time.h  vex_ut1_interp.cxx
C++/vex_to_sky2/vex2005/: CMakeLists.txt  Makefile  README  print_vex.c  vex.h  vex.y  vex.yy.c  vex.yy.l  vex_get.c  vex_util.c  y.tab.c  y.tab.h
C++/vex_to_sky2/vex2005/test_parser/: CMakeLists.txt  Makefile  main.c  t.f  wh
C++/vex_to_sky2/vexplus/: .dependencies.mk  CMakeLists.txt  Makefile  cmake_install.cmake  vexplus.C.old  vexplus.cxx
FORTRAN/: CMakeLists.txt  Makefile
FORTRAN/IRI/: 00README.TXT  CMakeLists.txt  JMA_code.h  Makefile  ap.dat.20050913  ap.dat.20060631  ap.dat.orig  cira.f  ig_rz.dat.20050825  igrf.f  input.txt  inputne  inputne.txt  iridreg.f  irifun.f  irisub.f  irisubne.f  iritec.f  iritecne.f  iritest.f  iritest.o_old  iritestne.f  iritestne.o_old  jma_irisub.F  jma_irisub.F.old  jma_irisub_c.c  jma_irisub_c.h  jma_irisubne.F  kp0411.tab  kp0412.tab  kp0501.tab  kp0502.tab  kp0503.tab  kp0504.tab  kp0505.tab  kp0506.tab  kp0507.tab  kp0508.tab  kp0509.tab  kp0510.tab  (+24 more)
FORTRAN/IRI/updates/: irifun.for  irisub.for  iritest.for  iritestne.for
FORTRAN/PIM/PIM_1.7/: CMakeLists.txt  Makefile  pim17ug.ps2
FORTRAN/PIM/PIM_1.7/cgmdb/: CMakeLists.txt  Makefile  cglalo.dat7
FORTRAN/PIM/PIM_1.7/igrf/: jma_igrf10.c_jma  jma_igrf10.f_jma  jma_igrf11.c_agw  jma_igrf11.f_agw  jma_igrf13.c  jma_igrf13.f_agw
FORTRAN/PIM/PIM_1.7/llfdb/: CMakeLists.txt  Makefile
FORTRAN/PIM/PIM_1.7/llfdb/form/: fac03max.oe  fac03max.op  fac03min.oe  fac03min.op  fac03mod.oe  fac03mod.op  fac06max.oe  fac06max.op  fac06min.oe  fac06min.op  fac06mod.oe  fac06mod.op  fac12max.oe  fac12max.op  fac12min.oe  fac12min.op  fac12mod.oe  fac12mod.op  fnd03max.oe  fnd03max.op  fnd03min.oe  fnd03min.op  fnd03mod.oe  fnd03mod.op  fnd06max.oe  fnd06max.op  fnd06min.oe  fnd06min.op  fnd06mod.oe  fnd06mod.op  fnd12max.oe  fnd12max.op  (+40 more)
FORTRAN/PIM/PIM_1.7/lmedb/: CMakeLists.txt  Makefile
FORTRAN/PIM/PIM_1.7/mlfdb/: CMakeLists.txt  Makefile
FORTRAN/PIM/PIM_1.7/noaa_dat/: CMakeLists.txt  IMF24.dat_latest  kp_ap.fmt  kpf107.dat_2013  omni2_daily_11411.fmt  update_weather.py
FORTRAN/PIM/PIM_1.7/ursidb/: CMakeLists.txt  Makefile
FORTRAN/PIM/PIM_1.7/usudb/: CMakeLists.txt  Makefile
FORTRAN/SOFA/: CMakeLists.txt  Makefile  finals.all  iers-gaz13  readme.2.finals  readme.finals  sofa.jma.tgz
FORTRAN/SOFA/sofa/: 00READ.ME  CMakeLists.txt  Makefile  changes.lis  consts.lis  copyr.lis  intro.lis  makefile.old  manual.lis  sofa_lib.lis  sofa_vml.lis  title.lis
FORTRAN/SOFA/sofa.old/: 00READ.ME  consts.lis  contents.lis  copyr.lis  dat.f  manual.lis  sofa_lib.lis  sofa_vml.lis
Python/: CMakeLists.txt  Makefile
Python/jma_scripts_1/: Albus_Coordinates.py  Albus_Iono.py  Albus_RINEX.py  Albus_RINEX_2.py  Albus_RINEX_download.py  Albus_RINEX_userftp.py  Albus_Wide_0.py  GPS_stations.py  IGS08stns  Makefile  README  gps_pos_default.snx  gps_pos_default.snx_new  gps_pos_default.snx_old  jma_EVN.py  jma_aips.py  testin
Python/jma_scripts_1/doc/: glonass.txt  rinex211.txt  sp3c.txt
python_scripts/: Albus_Coordinates.py  Albus_RINEX.py  Albus_RINEX_2.py  Albus_RINEX_download.py  Albus_iono_object.py  Albus_rnx3_to_rnx2.py  CMakeLists.txt  GPS_stations.py  IGS08stns  MS_Iono_agw_azel_par.py  MS_Iono_agw_multi_dir.py  MS_Iono_agw_multi_stn.py  MS_Iono_agw_par.py  MS_Iono_functions.py  MS_Iono_test.py  Makefile  compare_iono_results.py  diff_plot.py  gps_pos_default.snx  hampel.py  hampel_filter_plot.py  jma_tools.py  lenc_latlonxyz.py  plot_albus.py  plot_albus_az.py  plot_albus_diff_rm.py  plot_albus_diff_rm_hrs.py  plot_albus_diff_stec.py  plot_albus_diff_stec_hrs.py  plot_albus_diff_tec_hrs.py  plot_albus_elev.py  plot_albus_elev_hrs.py  plot_albus_multi_elev.py  plot_albus_multi_rm.py  plot_albus_multi_stec.py  plot_albus_rm.py  plot_albus_rm_elev_hrs.py  plot_albus_rm_hrs.py  plot_albus_rm_hrs1.py  plot_albus_stec.py  (+13 more)
(+2017 files in other folders)
